# 3dVision

./: .gitignore
Semana1/: Falta.txt
Semana1/aug_real/: README.txt  aug_real.cpp  common_code.cpp
Semana1/calibrate/: CHANGELOG.TXT  README.txt  calibrate.cpp  cmake_install.cmake  common_code.cpp  common_code.hpp  out.avi  out.yml  undistort  undistort.cpp
Semana1/color_balance/: CHANGELOG.TXT  CMakeCache.txt  Makefile  README.txt  color_balance  color_balance.cc  common_code.cpp  test_common_code
Semana1/fran/: common_code.cpp  usm_enhance.cpp
Semana1/fsiv_tutorial_opencv/: Makefile  README.txt  cmake_install.cmake  comp_stats  esqueleto  esqueleto.cc  pruebas  show_img  show_video  show_video.cc
Semana1/img_equalization/: CHANGELOG.txt  README.txt  cmake_install.cmake  common_code.cpp  img_equalization.cpp  test_common_code_obf.cpp
Semana1/usm_enhance/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake  common_code.cpp  test_common_code  usm_enhance  usm_enhance.cpp  usm_enhanceOLD.cpp
Semana2/Practicas/Practica1/: CMakeLists.txt  common_code.cpp  stereo_calibrate.cc
Semana2/Practicas/Stereo_calibration/: CMakeLists.txt  common_code.cpp  common_code.hpp  stereo_calibrate.cpp
Semana2/Practicas/Stereo_checkundistorted/: CMakeLists.txt  common_code.cpp  stereo_checkundistorted.cpp
Semana2/Practicas/disparity/: CMakeLists.txt  common_code.cpp  common_code.hpp  stereo_disparity.cpp
Semana2/Practicas/fundamental_matrix/: CMakeLists.txt  README.txt  common_code.cpp  common_code.hpp  fundamental_matrix.cpp  stereo_sparse.cpp
Semana2/Practicas/stereo_sparse/: CMakeLists.txt  (+3 more)
Semana2/Practicas/triangulate_epipolar/: CMakeLists.txt  README.txt  common_code.cpp  common_code.hpp  out.pcd  salidacarlos.pcd  triangulate_epipolar.cpp
Semana3/sfs/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  camera_parameters.cpp  camera_parameters.hpp  code_todo.cpp  mk_octree.cpp  mk_voxelset.cpp  my_octree  my_octree.wrl  my_voxelset  oct2wrl.cpp  octree.cpp  octree.hpp  sfs.hpp  view.cpp  view.hpp  voxel.cpp  voxel.hpp  voxelset.cpp  voxelset.hpp  vs2wrl.cpp
Semana3/sfs/data/body-4-4/: body_4-4.wrl  ext_4_4-0.yml  ext_4_4-4.yml  ext_4_4-6.yml  ext_4_4-7.yml
Semana3/sfs/data/box-cylinder-4-4/: box-cylinder-4_4.wrl  ext_4_4-3.yml  ext_4_4-5.yml
Semana3/sfs/data/box-cylinder-8/: box-cylinder-8.wrl  ext_8-1.yml  ext_8-3.yml  ext_8-5.yml  ext_8-7.yml
Semana3/sfs/data/box-cylinder-8_8/: box-cylinder-8_8.wrl  ext_8_8-10.yml  ext_8_8-12.yml  ext_8_8-14.yml  ext_8_8-2.yml  ext_8_8-8.yml
Semana3/sfs/data/cone-4/: cone_4.wrl  ext_4-2.yml  voxelset.wrl
Semana3/sls/: CMakeLists.txt  LEEME.txt  TODO  bc_scanning.cpp  bc_scanning.hpp  calibrate.cpp  calibration.cpp  calibration.hpp  capturer.cpp  capturer.hpp  cparams.cpp  cparams.hpp  decode_bc_scanning.cpp  mk_bc_scan.cpp  projector.cpp  projector.hpp  scan_pattern.cpp  scanning_pattern_sequence.cpp  scanning_pattern_sequence.hpp  sls.cpp  sls.hpp  triangulation.cpp  triangulation.hpp
calibrate/: CMakeCache.txt  Makefile  calibrate  common_code.cpp  test_common_code
color_balance/: Makefile  cmake_install.cmake  test_common_code_obf.cpp
fran/: calibrate.cpp
fsiv_tutorial_opencv/: CHANGELOG.TXT~  CMakeCache.txt  CMakeLists.txt  comp_stats  esqueleto  esqueleto.cc  pruebas.cpp  show_img.cc
img_equalization/: CMakeCache.txt  Makefile
usm_enhance/: CMakeCache.txt  common_code.cpp  usm_enhance  usm_enhance.cpp
(+2 files in other folders)
